[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
num-bigint-dig = { version = "0.8.4", features = ["prime"] }
num-integer = "0.1.45"
num-traits = "0.2.16"
rand = "0.8.5"
